examples/type_error/mod.js
load('./submod.js').then(function (submod) {
    return submod(4);
})
